--- a/addons/sourcemod/configs/weapons/weapons_dutch.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_dutch.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Commemoration"
+	{
+		"index"		"919"
+		"classes"	"weapon_famas;"
+	}
+	"Sacrifice"
+	{
+		"index"		"918"
+		"classes"	"weapon_glock;"
+	}
+	"Wildfire"
+	{
+		"index"		"917"
+		"classes"	"weapon_awp;"
+	}
+	"Plastique"
+	{
+		"index"		"916"
+		"classes"	"weapon_ump45;"
+	}
+	"Agent"
+	{
+		"index"		"915"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Assault"
+	{
+		"index"		"914"
+		"classes"	"weapon_scar20;"
+	}
+	"Death by Puppy"
+	{
+		"index"		"913"
+		"classes"	"weapon_aug;"
+	}
+	"Nostalgia"
+	{
+		"index"		"911"
+		"classes"	"weapon_p90;"
+	}
+	"Hydra"
+	{
+		"index"		"910"
+		"classes"	"weapon_mp9;"
+	}
+	"Popdog"
+	{
+		"index"		"909"
+		"classes"	"weapon_mag7;"
+	}
+	"Classic Crate"
+	{
+		"index"		"908"
+		"classes"	"weapon_mac10;"
+	}
+	"Inferno"
+	{
+		"index"		"907"
+		"classes"	"weapon_p250;"
+	}
+	"Buddy"
+	{
+		"index"		"906"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Flash Out"
+	{
+		"index"		"905"
+		"classes"	"weapon_tec9;"
+	}
+	"Decommissioned"
+	{
+		"index"		"904"
+		"classes"	"weapon_famas;"
+	}
+	"Elite 1.6"
+	{
+		"index"		"903"
+		"classes"	"weapon_elite;"
+	}
+	"Aztec"
+	{
+		"index"		"902"
+		"classes"	"weapon_m249;"
+	}
 	"Damascus Steel"
 	{
 		"index"		"858"
@@ -70,7 +155,7 @@
 		"index"		"845"
 		"classes"	"weapon_aug;"
 	}
-	"Emperor"
+	"The Emperor"
 	{
 		"index"		"844"
 		"classes"	"weapon_m4a1;"
@@ -208,7 +293,7 @@
 	"Night Stripe"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Eye of Athena"
 	{
@@ -1104,6 +1189,11 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"X-Ray"
+	{
+		"index"		"125"
+		"classes"	"weapon_p250;"
 	}
 	"High Beam"
 	{
@@ -3083,7 +3173,7 @@
 	"Scorched"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"BOOM"
 	{
@@ -3198,7 +3288,7 @@
 	"Urban Masked"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Orange Peel"
 	{
@@ -3323,7 +3413,7 @@
 	"Boreal Forest"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Winter Forest"
 	{
@@ -3348,7 +3438,7 @@
 	"Safari Mesh"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Scorpion"
 	{
@@ -3383,7 +3473,7 @@
 	"Slaughter"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Lightning Strike"
 	{
@@ -3408,17 +3498,17 @@
 	"Case Hardened"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Stained"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Blue Steel"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Copper"
 	{
@@ -3438,7 +3528,7 @@
 	"Fade"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Blaze"
 	{
@@ -3533,7 +3623,7 @@
 	"Crimson Web"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Skulls"
 	{
@@ -3563,7 +3653,7 @@
 	"Forest DDPAT"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Candy Apple"
 	{
