--- a/addons/sourcemod/configs/weapons/weapons_german.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_german.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Commemoration"
+	{
+		"index"		"919"
+		"classes"	"weapon_famas;"
+	}
+	"Sacrifice"
+	{
+		"index"		"918"
+		"classes"	"weapon_glock;"
+	}
+	"Wildfire"
+	{
+		"index"		"917"
+		"classes"	"weapon_awp;"
+	}
+	"Plastique"
+	{
+		"index"		"916"
+		"classes"	"weapon_ump45;"
+	}
+	"Agent"
+	{
+		"index"		"915"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Assault"
+	{
+		"index"		"914"
+		"classes"	"weapon_scar20;"
+	}
+	"Death by Puppy"
+	{
+		"index"		"913"
+		"classes"	"weapon_aug;"
+	}
+	"Nostalgia"
+	{
+		"index"		"911"
+		"classes"	"weapon_p90;"
+	}
+	"Hydra"
+	{
+		"index"		"910"
+		"classes"	"weapon_mp9;"
+	}
+	"Popdog"
+	{
+		"index"		"909"
+		"classes"	"weapon_mag7;"
+	}
+	"Classic Crate"
+	{
+		"index"		"908"
+		"classes"	"weapon_mac10;"
+	}
+	"Inferno"
+	{
+		"index"		"907"
+		"classes"	"weapon_p250;"
+	}
+	"Buddy"
+	{
+		"index"		"906"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Flash Out"
+	{
+		"index"		"905"
+		"classes"	"weapon_tec9;"
+	}
+	"Decommissioned"
+	{
+		"index"		"904"
+		"classes"	"weapon_famas;"
+	}
+	"Elite 1.6"
+	{
+		"index"		"903"
+		"classes"	"weapon_elite;"
+	}
+	"Aztec"
+	{
+		"index"		"902"
+		"classes"	"weapon_m249;"
+	}
 	"Damaszener Stahl"
 	{
 		"index"		"858"
@@ -35,47 +120,47 @@
 		"index"		"852"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Moonrise"
+	"Mondaufgang"
 	{
 		"index"		"851"
 		"classes"	"weapon_ump45;"
 	}
-	"Incinegator"
+	"Flammgator"
 	{
 		"index"		"850"
 		"classes"	"weapon_xm1014;"
 	}
-	"Off World"
+	"Vagabund"
 	{
 		"index"		"849"
 		"classes"	"weapon_p90;"
 	}
-	"Verdigris"
+	"Grünspan"
 	{
 		"index"		"848"
 		"classes"	"weapon_p250;"
 	}
-	"Mischief"
+	"Unheil"
 	{
 		"index"		"847"
 		"classes"	"weapon_mp7;"
 	}
-	"Gauss"
+	"Gauß"
 	{
 		"index"		"846"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Momentum"
+	"Impuls"
 	{
 		"index"		"845"
 		"classes"	"weapon_aug;"
 	}
-	"Emperor"
+	"Der Herrscher"
 	{
 		"index"		"844"
 		"classes"	"weapon_m4a1;"
 	}
-	"Skull Crusher"
+	"Schädelbrecher"
 	{
 		"index"		"843"
 		"classes"	"weapon_revolver;"
@@ -85,17 +170,17 @@
 		"index"		"842"
 		"classes"	"weapon_galilar;"
 	}
-	"Light Rail"
+	"Lichtbahn"
 	{
 		"index"		"841"
 		"classes"	"weapon_deagle;"
 	}
-	"Whitefish"
+	"Felchen"
 	{
 		"index"		"840"
 		"classes"	"weapon_mac10;"
 	}
-	"Bamboozle"
+	"Ausgetrickst"
 	{
 		"index"		"839"
 		"classes"	"weapon_tec9;"
@@ -105,17 +190,17 @@
 		"index"		"838"
 		"classes"	"weapon_awp;"
 	}
-	"Angry Mob"
+	"Aufgebrachte Menge"
 	{
 		"index"		"837"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Uncharted"
+	"Unerforscht"
 	{
 		"index"		"836"
 		"classes"	"weapon_ak47;"
 	}
-	"Crypsis"
+	"Krypsis"
 	{
 		"index"		"835"
 		"classes"	"weapon_famas;"
@@ -165,7 +250,7 @@
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Oxide Blaze"
+	"Oxidbrand"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
@@ -175,7 +260,7 @@
 		"index"		"807"
 		"classes"	"weapon_galilar;"
 	}
-	"Scavenger"
+	"Aasgeier"
 	{
 		"index"		"806"
 		"classes"	"weapon_g3sg1;"
@@ -185,7 +270,7 @@
 		"index"		"805"
 		"classes"	"weapon_deagle;"
 	}
-	"Modest Threat"
+	"Bescheidene Drohung"
 	{
 		"index"		"804"
 		"classes"	"weapon_mp9;"
@@ -195,7 +280,7 @@
 		"index"		"803"
 		"classes"	"weapon_awp;"
 	}
-	"Momentum"
+	"Impuls"
 	{
 		"index"		"802"
 		"classes"	"weapon_ump45;"
@@ -208,7 +293,7 @@
 	"Nachtstreifen"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Auge der Athene"
 	{
@@ -240,7 +325,7 @@
 		"index"		"718"
 		"classes"	"weapon_awp;"
 	}
-	"Traction"
+	"Distraktion"
 	{
 		"index"		"717"
 		"classes"	"weapon_p90;"
@@ -285,27 +370,27 @@
 		"index"		"709"
 		"classes"	"weapon_cz75a;"
 	}
-	"Amber Slipstream"
+	"Bernsteinwindschatten"
 	{
 		"index"		"708"
 		"classes"	"weapon_aug;"
 	}
-	"Neon Rider"
+	"Neonreiter"
 	{
 		"index"		"707"
 		"classes"	"weapon_ak47;"
 	}
-	"Oxide Blaze"
+	"Oxidbrand"
 	{
 		"index"		"706"
 		"classes"	"weapon_xm1014;"
 	}
-	"Cortex"
+	"Hirnrinde"
 	{
 		"index"		"705"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Arctic Wolf"
+	"Polarwolf"
 	{
 		"index"		"704"
 		"classes"	"weapon_ump45;"
@@ -320,32 +405,32 @@
 		"index"		"702"
 		"classes"	"weapon_sg556;"
 	}
-	"Grip"
+	"Griff"
 	{
 		"index"		"701"
 		"classes"	"weapon_revolver;"
 	}
-	"Urban Hazard"
+	"Städtische Gefahr"
 	{
 		"index"		"700"
 		"classes"	"weapon_hkp2000;"
 	}
-	"Wild Six"
+	"Wilde Sechs"
 	{
 		"index"		"699"
 		"classes"	"weapon_nova;"
 	}
-	"Lionfish"
+	"Rotfeuerfisch"
 	{
 		"index"		"698"
 		"classes"	"weapon_negev;"
 	}
-	"Black Sand"
+	"Schwarzer Sand"
 	{
 		"index"		"697"
 		"classes"	"weapon_mp9;"
 	}
-	"Bloodsport"
+	"Blutsport"
 	{
 		"index"		"696"
 		"classes"	"weapon_mp7;"
@@ -355,17 +440,17 @@
 		"index"		"695"
 		"classes"	"weapon_m4a1;"
 	}
-	"Moonrise"
+	"Mondaufgang"
 	{
 		"index"		"694"
 		"classes"	"weapon_glock;"
 	}
-	"Flame Test"
+	"Flammentest"
 	{
 		"index"		"693"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Night Riot"
+	"Nachtunruhe"
 	{
 		"index"		"692"
 		"classes"	"weapon_bizon;"
@@ -380,7 +465,7 @@
 		"index"		"690"
 		"classes"	"weapon_aug;"
 	}
-	"Lab Rats"
+	"Laborratten"
 	{
 		"index"		"800"
 		"classes"	"weapon_mp5sd;"
@@ -405,7 +490,7 @@
 		"index"		"686"
 		"classes"	"weapon_sg556;"
 	}
-	"Jungle Slipstream"
+	"Dschungel-Windschatten"
 	{
 		"index"		"685"
 		"classes"	"weapon_scar20;"
@@ -455,7 +540,7 @@
 		"index"		"676"
 		"classes"	"weapon_bizon;"
 	}
-	"Kaiserin"
+	"Die Herrscherin"
 	{
 		"index"		"675"
 		"classes"	"weapon_ak47;"
@@ -570,17 +655,17 @@
 		"index"		"653"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Scaffold"
+	"Gerüst"
 	{
 		"index"		"652"
 		"classes"	"weapon_ump45;"
 	}
-	"Last Dive"
+	"Reservoir"
 	{
 		"index"		"651"
 		"classes"	"weapon_mac10;"
 	}
-	"Ripple"
+	"Plätschern"
 	{
 		"index"		"650"
 		"classes"	"weapon_p250;"
@@ -590,27 +675,27 @@
 		"index"		"649"
 		"classes"	"weapon_mp7;"
 	}
-	"Emerald Poison Dart"
+	"Smaragdgrüner Giftpfeil"
 	{
 		"index"		"648"
 		"classes"	"weapon_m249;"
 	}
-	"Crimson Tsunami"
+	"Purpurner Tsunami"
 	{
 		"index"		"647"
 		"classes"	"weapon_galilar;"
 	}
-	"Capillary"
+	"Kapillare"
 	{
 		"index"		"646"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Oxide Blaze"
+	"Oxidbrand"
 	{
 		"index"		"645"
 		"classes"	"weapon_deagle;"
 	}
-	"Decimator"
+	"Dezimator"
 	{
 		"index"		"644"
 		"classes"	"weapon_m4a1_silencer;"
@@ -620,17 +705,17 @@
 		"index"		"643"
 		"classes"	"weapon_cz75a;"
 	}
-	"Blueprint"
+	"Blaupause"
 	{
 		"index"		"642"
 		"classes"	"weapon_scar20;"
 	}
-	"Jungle Slipstream"
+	"Dschungel-Windschatten"
 	{
 		"index"		"641"
 		"classes"	"weapon_bizon;"
 	}
-	"Fever Dream"
+	"Fiebertraum"
 	{
 		"index"		"640"
 		"classes"	"weapon_awp;"
@@ -705,7 +790,7 @@
 		"index"		"626"
 		"classes"	"weapon_famas;"
 	}
-	"Royal Consorts"
+	"Königliche Gemahlen"
 	{
 		"index"		"625"
 		"classes"	"weapon_elite;"
@@ -1105,7 +1190,12 @@
 		"index"		"541"
 		"classes"	"weapon_aug;"
 	}
-	"High Beam"
+	"Röntgen"
+	{
+		"index"		"125"
+		"classes"	"weapon_p250;"
+	}
+	"Fernlicht"
 	{
 		"index"		"799"
 		"classes"	"weapon_glock;"
@@ -1115,32 +1205,32 @@
 		"index"		"798"
 		"classes"	"weapon_revolver;"
 	}
-	"Brake Light"
+	"Bremslicht"
 	{
 		"index"		"797"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Check Engine"
+	"Motorkontrolle"
 	{
 		"index"		"796"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Safety Net"
+	"Sicherheitsnetz"
 	{
 		"index"		"795"
 		"classes"	"weapon_ak47;"
 	}
-	"Sweeper"
+	"Kehrmaschine"
 	{
 		"index"		"794"
 		"classes"	"weapon_aug;"
 	}
-	"Converter"
+	"Konverter"
 	{
 		"index"		"793"
 		"classes"	"weapon_m4a1;"
 	}
-	"Slide"
+	"Rutsch"
 	{
 		"index"		"755"
 		"classes"	"weapon_mp9;"
@@ -1150,17 +1240,17 @@
 		"index"		"754"
 		"classes"	"weapon_mag7;"
 	}
-	"Dirt Drop"
+	"Schmutz"
 	{
 		"index"		"753"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Fade"
+	"Farbverlauf"
 	{
 		"index"		"752"
 		"classes"	"weapon_mp7;"
 	}
-	"Hand Brake"
+	"Handbremse"
 	{
 		"index"		"751"
 		"classes"	"weapon_ssg08;"
@@ -1185,22 +1275,22 @@
 		"index"		"747"
 		"classes"	"weapon_elite;"
 	}
-	"Control Panel"
+	"Steuerkonsole"
 	{
 		"index"		"792"
 		"classes"	"weapon_m4a1_silencer;"
 	}
-	"Remote Control"
+	"Fernbedienung"
 	{
 		"index"		"791"
 		"classes"	"weapon_tec9;"
 	}
-	"Cold Fusion"
+	"Kalte Fusion"
 	{
 		"index"		"790"
 		"classes"	"weapon_galilar;"
 	}
-	"Nuclear Garden"
+	"Nuklearer Garten"
 	{
 		"index"		"789"
 		"classes"	"weapon_glock;"
@@ -1210,27 +1300,27 @@
 		"index"		"788"
 		"classes"	"weapon_awp;"
 	}
-	"Core Breach"
+	"Fusionsreaktor"
 	{
 		"index"		"787"
 		"classes"	"weapon_mag7;"
 	}
-	"Exchanger"
+	"Umwandler"
 	{
 		"index"		"786"
 		"classes"	"weapon_p250;"
 	}
-	"Mandrel"
+	"Dorn"
 	{
 		"index"		"785"
 		"classes"	"weapon_nova;"
 	}
-	"Coolant"
+	"Kühlmittel"
 	{
 		"index"		"784"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Bulkhead"
+	"Schott"
 	{
 		"index"		"783"
 		"classes"	"weapon_negev;"
@@ -1240,7 +1330,7 @@
 		"index"		"782"
 		"classes"	"weapon_mp7;"
 	}
-	"Co-Processor"
+	"Co-Prozessor"
 	{
 		"index"		"781"
 		"classes"	"weapon_mp5sd;"
@@ -1250,27 +1340,27 @@
 		"index"		"780"
 		"classes"	"weapon_m4a1;"
 	}
-	"Random Access"
+	"Direktzugriff"
 	{
 		"index"		"779"
 		"classes"	"weapon_aug;"
 	}
-	"Facility Dark"
+	"Anlagendunkel"
 	{
 		"index"		"778"
 		"classes"	"weapon_ump45;"
 	}
-	"Facility Draft"
+	"Anlagenentwurf"
 	{
 		"index"		"777"
 		"classes"	"weapon_p250;"
 	}
-	"Facility Negative"
+	"Anlagennegativ"
 	{
 		"index"		"776"
 		"classes"	"weapon_p90;"
 	}
-	"Facility Sketch"
+	"Anlagenskizze"
 	{
 		"index"		"775"
 		"classes"	"weapon_bizon;"
@@ -2155,7 +2245,7 @@
 		"index"		"365"
 		"classes"	"weapon_mp7;"
 	}
-	"Businessklasse"
+	"Business Class"
 	{
 		"index"		"364"
 		"classes"	"weapon_usp_silencer;"
@@ -2330,7 +2420,7 @@
 		"index"		"329"
 		"classes"	"weapon_mp9;"
 	}
-	"Handkanone"
+	"Handfeuerwaffe"
 	{
 		"index"		"328"
 		"classes"	"weapon_deagle;"
@@ -3083,7 +3173,7 @@
 	"Versengt"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"BUMM"
 	{
@@ -3198,7 +3288,7 @@
 	"Städtisch maskiert"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Orangenschale"
 	{
@@ -3323,7 +3413,7 @@
 	"Borealer Nadelwald"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Winterwald"
 	{
@@ -3348,7 +3438,7 @@
 	"Safarinetz"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Skorpion"
 	{
@@ -3383,7 +3473,7 @@
 	"Metzelei"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Blitzschlag"
 	{
@@ -3408,17 +3498,17 @@
 	"Einsatzgehärtet"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Gefleckt"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Blauer Stahl"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Kupfer"
 	{
@@ -3438,7 +3528,7 @@
 	"Farbverlauf"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Großbrand"
 	{
@@ -3533,7 +3623,7 @@
 	"Purpurnes Netz"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Totenschädel"
 	{
@@ -3563,7 +3653,7 @@
 	"Wald-DDPAT"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Kandierter Apfel"
 	{
