--- a/addons/sourcemod/configs/weapons/weapons_latam.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_latam.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Commemoration"
+	{
+		"index"		"919"
+		"classes"	"weapon_famas;"
+	}
+	"Sacrifice"
+	{
+		"index"		"918"
+		"classes"	"weapon_glock;"
+	}
+	"Wildfire"
+	{
+		"index"		"917"
+		"classes"	"weapon_awp;"
+	}
+	"Plastique"
+	{
+		"index"		"916"
+		"classes"	"weapon_ump45;"
+	}
+	"Agent"
+	{
+		"index"		"915"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Assault"
+	{
+		"index"		"914"
+		"classes"	"weapon_scar20;"
+	}
+	"Death by Puppy"
+	{
+		"index"		"913"
+		"classes"	"weapon_aug;"
+	}
+	"Nostalgia"
+	{
+		"index"		"911"
+		"classes"	"weapon_p90;"
+	}
+	"Hydra"
+	{
+		"index"		"910"
+		"classes"	"weapon_mp9;"
+	}
+	"Popdog"
+	{
+		"index"		"909"
+		"classes"	"weapon_mag7;"
+	}
+	"Classic Crate"
+	{
+		"index"		"908"
+		"classes"	"weapon_mac10;"
+	}
+	"Inferno"
+	{
+		"index"		"907"
+		"classes"	"weapon_p250;"
+	}
+	"Buddy"
+	{
+		"index"		"906"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Flash Out"
+	{
+		"index"		"905"
+		"classes"	"weapon_tec9;"
+	}
+	"Decommissioned"
+	{
+		"index"		"904"
+		"classes"	"weapon_famas;"
+	}
+	"Elite 1.6"
+	{
+		"index"		"903"
+		"classes"	"weapon_elite;"
+	}
+	"Aztec"
+	{
+		"index"		"902"
+		"classes"	"weapon_m249;"
+	}
 	"Acero de damasco"
 	{
 		"index"		"858"
@@ -35,27 +120,27 @@
 		"index"		"852"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Moonrise"
+	"Superluna"
 	{
 		"index"		"851"
 		"classes"	"weapon_ump45;"
 	}
-	"Incinegator"
+	"Pirodrilo"
 	{
 		"index"		"850"
 		"classes"	"weapon_xm1014;"
 	}
-	"Off World"
+	"De otro mundo"
 	{
 		"index"		"849"
 		"classes"	"weapon_p90;"
 	}
-	"Verdigris"
+	"Verdete"
 	{
 		"index"		"848"
 		"classes"	"weapon_p250;"
 	}
-	"Mischief"
+	"Maldad"
 	{
 		"index"		"847"
 		"classes"	"weapon_mp7;"
@@ -65,17 +150,17 @@
 		"index"		"846"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Momentum"
+	"Impulso"
 	{
 		"index"		"845"
 		"classes"	"weapon_aug;"
 	}
-	"Emperor"
+	"El Emperador"
 	{
 		"index"		"844"
 		"classes"	"weapon_m4a1;"
 	}
-	"Skull Crusher"
+	"Pulverizador de cráneos"
 	{
 		"index"		"843"
 		"classes"	"weapon_revolver;"
@@ -85,17 +170,17 @@
 		"index"		"842"
 		"classes"	"weapon_galilar;"
 	}
-	"Light Rail"
+	"Juego de disparos"
 	{
 		"index"		"841"
 		"classes"	"weapon_deagle;"
 	}
-	"Whitefish"
+	"Pez blanco"
 	{
 		"index"		"840"
 		"classes"	"weapon_mac10;"
 	}
-	"Bamboozle"
+	"Caña de bambú"
 	{
 		"index"		"839"
 		"classes"	"weapon_tec9;"
@@ -105,97 +190,97 @@
 		"index"		"838"
 		"classes"	"weapon_awp;"
 	}
-	"Angry Mob"
+	"Turba Enfurecida"
 	{
 		"index"		"837"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Uncharted"
+	"Terreno desconocido"
 	{
 		"index"		"836"
 		"classes"	"weapon_ak47;"
 	}
-	"Crypsis"
+	"Cripsis"
 	{
 		"index"		"835"
 		"classes"	"weapon_famas;"
 	}
-	"Flashback"
+	"Memorias del pasado"
 	{
 		"index"		"817"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Fubar"
+	"FUBAR"
 	{
 		"index"		"816"
 		"classes"	"weapon_tec9;"
 	}
-	"Danger Close"
+	"Peligro cercano"
 	{
 		"index"		"815"
 		"classes"	"weapon_sg556;"
 	}
-	"Black Sand"
+	"Arena negra"
 	{
 		"index"		"814"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Nevermore"
+	"Nunca más"
 	{
 		"index"		"813"
 		"classes"	"weapon_p250;"
 	}
-	"Pipe Down"
+	"Tuberías"
 	{
 		"index"		"812"
 		"classes"	"weapon_mac10;"
 	}
-	"Magnesium"
+	"Magnesio"
 	{
 		"index"		"811"
 		"classes"	"weapon_m4a1;"
 	}
-	"Phosphor"
+	"Fósforo"
 	{
 		"index"		"810"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Wood Fired"
+	"Leña"
 	{
 		"index"		"809"
 		"classes"	"weapon_nova;"
 	}
-	"Oxide Blaze"
+	"Llamarada de óxido"
 	{
 		"index"		"808"
 		"classes"	"weapon_glock;"
 	}
-	"Signal"
+	"Señal"
 	{
 		"index"		"807"
 		"classes"	"weapon_galilar;"
 	}
-	"Scavenger"
+	"Carroñero"
 	{
 		"index"		"806"
 		"classes"	"weapon_g3sg1;"
 	}
-	"Mecha Industries"
+	"Industria mecánica"
 	{
 		"index"		"805"
 		"classes"	"weapon_deagle;"
 	}
-	"Modest Threat"
+	"Amenaza moderada"
 	{
 		"index"		"804"
 		"classes"	"weapon_mp9;"
 	}
-	"Neo-Noir"
+	"Neonoir"
 	{
 		"index"		"803"
 		"classes"	"weapon_awp;"
 	}
-	"Momentum"
+	"Impulso"
 	{
 		"index"		"802"
 		"classes"	"weapon_ump45;"
@@ -208,7 +293,7 @@
 	"Franja nocturna"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Ojo de Atenea"
 	{
@@ -380,7 +465,7 @@
 		"index"		"690"
 		"classes"	"weapon_aug;"
 	}
-	"Lab Rats"
+	"Ratas de laboratorio"
 	{
 		"index"		"800"
 		"classes"	"weapon_mp5sd;"
@@ -670,7 +755,7 @@
 		"index"		"633"
 		"classes"	"weapon_mag7;"
 	}
-	"Picadura de avispa"
+	"Aguafiestas"
 	{
 		"index"		"632"
 		"classes"	"weapon_m4a1;"
@@ -1105,7 +1190,12 @@
 		"index"		"541"
 		"classes"	"weapon_aug;"
 	}
-	"High Beam"
+	"Rayos X"
+	{
+		"index"		"125"
+		"classes"	"weapon_p250;"
+	}
+	"Luz alta"
 	{
 		"index"		"799"
 		"classes"	"weapon_glock;"
@@ -1115,22 +1205,22 @@
 		"index"		"798"
 		"classes"	"weapon_revolver;"
 	}
-	"Brake Light"
+	"Luz de freno"
 	{
 		"index"		"797"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Check Engine"
+	"Luz de servicio"
 	{
 		"index"		"796"
 		"classes"	"weapon_usp_silencer;"
 	}
-	"Safety Net"
+	"Red de seguridad"
 	{
 		"index"		"795"
 		"classes"	"weapon_ak47;"
 	}
-	"Sweeper"
+	"Barredor"
 	{
 		"index"		"794"
 		"classes"	"weapon_aug;"
@@ -1195,82 +1285,82 @@
 		"index"		"791"
 		"classes"	"weapon_tec9;"
 	}
-	"Cold Fusion"
+	"Fusión fría"
 	{
 		"index"		"790"
 		"classes"	"weapon_galilar;"
 	}
-	"Nuclear Garden"
+	"Jardín nuclear"
 	{
 		"index"		"789"
 		"classes"	"weapon_glock;"
 	}
-	"Acheron"
+	"Aquerón"
 	{
 		"index"		"788"
 		"classes"	"weapon_awp;"
 	}
-	"Core Breach"
+	"Brecha en el núcleo"
 	{
 		"index"		"787"
 		"classes"	"weapon_mag7;"
 	}
-	"Exchanger"
+	"Intercambiador"
 	{
 		"index"		"786"
 		"classes"	"weapon_p250;"
 	}
-	"Mandrel"
+	"Mandril"
 	{
 		"index"		"785"
 		"classes"	"weapon_nova;"
 	}
-	"Coolant"
+	"Refrigerante"
 	{
 		"index"		"784"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Bulkhead"
+	"Mamparo"
 	{
 		"index"		"783"
 		"classes"	"weapon_negev;"
 	}
-	"Motherboard"
+	"Tarjeta madre"
 	{
 		"index"		"782"
 		"classes"	"weapon_mp7;"
 	}
-	"Co-Processor"
+	"Coprocesador"
 	{
 		"index"		"781"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Mainframe"
+	"Ordenador Central"
 	{
 		"index"		"780"
 		"classes"	"weapon_m4a1;"
 	}
-	"Random Access"
+	"Acceso aleatorio"
 	{
 		"index"		"779"
 		"classes"	"weapon_aug;"
 	}
-	"Facility Dark"
+	"Instalaciones oscuras"
 	{
 		"index"		"778"
 		"classes"	"weapon_ump45;"
 	}
-	"Facility Draft"
+	"Borrador de las instalaciones"
 	{
 		"index"		"777"
 		"classes"	"weapon_p250;"
 	}
-	"Facility Negative"
+	"Negativo de las instalaciones"
 	{
 		"index"		"776"
 		"classes"	"weapon_p90;"
 	}
-	"Facility Sketch"
+	"Bosquejo de las instalaciones"
 	{
 		"index"		"775"
 		"classes"	"weapon_bizon;"
@@ -1810,7 +1900,7 @@
 		"index"		"436"
 		"classes"	"weapon_ump45;"
 	}
-	"La pole"
+	"Primera posición"
 	{
 		"index"		"435"
 		"classes"	"weapon_cz75a;"
@@ -3083,7 +3173,7 @@
 	"Chamuscado"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"BUM"
 	{
@@ -3198,7 +3288,7 @@
 	"Pátina urbana"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Piel de naranja"
 	{
@@ -3323,7 +3413,7 @@
 	"Bosque boreal"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Bosque invernal"
 	{
@@ -3348,7 +3438,7 @@
 	"Malla de safari"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Escorpión"
 	{
@@ -3383,7 +3473,7 @@
 	"Masacre"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Relámpago"
 	{
@@ -3408,24 +3498,24 @@
 	"Acero templado"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Manchado"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Azul metalizado"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Cobrizo"
 	{
 		"index"		"41"
 		"classes"	"weapon_sawedoff;"
 	}
-	"Noche cerrada"
+	"Nocturno"
 	{
 		"index"		"40"
 		"classes"	"weapon_deagle;weapon_glock;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;"
@@ -3438,7 +3528,7 @@
 	"Desteñido"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Llamarada"
 	{
@@ -3533,7 +3623,7 @@
 	"Tela escarlata"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Calaveras"
 	{
@@ -3563,9 +3653,9 @@
 	"DDPAT de bosque"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
-	"Manzana de caramelo"
+	"Manzana caramelizada"
 	{
 		"index"		"3"
 		"classes"	"weapon_fiveseven;weapon_glock;weapon_mac10;weapon_bizon;weapon_nova;"
