--- a/addons/sourcemod/configs/weapons/weapons_polish.cfg
+++ b/addons/sourcemod/configs/weapons/weapons_polish.cfg
@@ -1,5 +1,90 @@
 "Skins"
 {
+	"Commemoration"
+	{
+		"index"		"919"
+		"classes"	"weapon_famas;"
+	}
+	"Sacrifice"
+	{
+		"index"		"918"
+		"classes"	"weapon_glock;"
+	}
+	"Wildfire"
+	{
+		"index"		"917"
+		"classes"	"weapon_awp;"
+	}
+	"Plastique"
+	{
+		"index"		"916"
+		"classes"	"weapon_ump45;"
+	}
+	"Agent"
+	{
+		"index"		"915"
+		"classes"	"weapon_mp5sd;"
+	}
+	"Assault"
+	{
+		"index"		"914"
+		"classes"	"weapon_scar20;"
+	}
+	"Death by Puppy"
+	{
+		"index"		"913"
+		"classes"	"weapon_aug;"
+	}
+	"Nostalgia"
+	{
+		"index"		"911"
+		"classes"	"weapon_p90;"
+	}
+	"Hydra"
+	{
+		"index"		"910"
+		"classes"	"weapon_mp9;"
+	}
+	"Popdog"
+	{
+		"index"		"909"
+		"classes"	"weapon_mag7;"
+	}
+	"Classic Crate"
+	{
+		"index"		"908"
+		"classes"	"weapon_mac10;"
+	}
+	"Inferno"
+	{
+		"index"		"907"
+		"classes"	"weapon_p250;"
+	}
+	"Buddy"
+	{
+		"index"		"906"
+		"classes"	"weapon_fiveseven;"
+	}
+	"Flash Out"
+	{
+		"index"		"905"
+		"classes"	"weapon_tec9;"
+	}
+	"Decommissioned"
+	{
+		"index"		"904"
+		"classes"	"weapon_famas;"
+	}
+	"Elite 1.6"
+	{
+		"index"		"903"
+		"classes"	"weapon_elite;"
+	}
+	"Aztec"
+	{
+		"index"		"902"
+		"classes"	"weapon_m249;"
+	}
 	"Stal damasceńska"
 	{
 		"index"		"858"
@@ -35,27 +120,27 @@
 		"index"		"852"
 		"classes"	"weapon_knife_widowmaker;"
 	}
-	"Moonrise"
+	"Wschód Księżyca"
 	{
 		"index"		"851"
 		"classes"	"weapon_ump45;"
 	}
-	"Incinegator"
+	"Ognioligator"
 	{
 		"index"		"850"
 		"classes"	"weapon_xm1014;"
 	}
-	"Off World"
+	"Nie z tego świata"
 	{
 		"index"		"849"
 		"classes"	"weapon_p90;"
 	}
-	"Verdigris"
+	"Patyna"
 	{
 		"index"		"848"
 		"classes"	"weapon_p250;"
 	}
-	"Mischief"
+	"Łobuz"
 	{
 		"index"		"847"
 		"classes"	"weapon_mp7;"
@@ -65,17 +150,17 @@
 		"index"		"846"
 		"classes"	"weapon_mp5sd;"
 	}
-	"Momentum"
+	"Pęd"
 	{
 		"index"		"845"
 		"classes"	"weapon_aug;"
 	}
-	"Emperor"
+	"Cesarz"
 	{
 		"index"		"844"
 		"classes"	"weapon_m4a1;"
 	}
-	"Skull Crusher"
+	"Miażdżyciel czasek"
 	{
 		"index"		"843"
 		"classes"	"weapon_revolver;"
@@ -85,37 +170,37 @@
 		"index"		"842"
 		"classes"	"weapon_galilar;"
 	}
-	"Light Rail"
+	"Szyna świetlna"
 	{
 		"index"		"841"
 		"classes"	"weapon_deagle;"
 	}
-	"Whitefish"
+	"Głąbiel"
 	{
 		"index"		"840"
 		"classes"	"weapon_mac10;"
 	}
-	"Bamboozle"
+	"Bambuko"
 	{
 		"index"		"839"
 		"classes"	"weapon_tec9;"
 	}
-	"Atheris"
+	"Gałęźnica"
 	{
 		"index"		"838"
 		"classes"	"weapon_awp;"
 	}
-	"Angry Mob"
+	"Wściekły tłum"
 	{
 		"index"		"837"
 		"classes"	"weapon_fiveseven;"
 	}
-	"Uncharted"
+	"Niezbadany"
 	{
 		"index"		"836"
 		"classes"	"weapon_ak47;"
 	}
-	"Crypsis"
+	"Mimetyzm"
 	{
 		"index"		"835"
 		"classes"	"weapon_famas;"
@@ -208,7 +293,7 @@
 	"Nocne pręgi"
 	{
 		"index"		"735"
-		"classes"	"weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_knife_css;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Oko Ateny"
 	{
@@ -1104,6 +1189,11 @@
 	{
 		"index"		"541"
 		"classes"	"weapon_aug;"
+	}
+	"Rentgen"
+	{
+		"index"		"125"
+		"classes"	"weapon_p250;"
 	}
 	"Światła drogowe"
 	{
@@ -3083,7 +3173,7 @@
 	"Popiół"
 	{
 		"index"		"175"
-		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p90;weapon_ump45;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"BUM"
 	{
@@ -3198,7 +3288,7 @@
 	"Miejski zamaskowany"
 	{
 		"index"		"143"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Skórka pomarańczy"
 	{
@@ -3323,7 +3413,7 @@
 	"Tajga"
 	{
 		"index"		"77"
-		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_p250;weapon_m4a1_silencer;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Las zimowy"
 	{
@@ -3348,7 +3438,7 @@
 	"Siatka safari"
 	{
 		"index"		"72"
-		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_ak47;weapon_awp;weapon_g3sg1;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Skorpion"
 	{
@@ -3383,7 +3473,7 @@
 	"Rzeź"
 	{
 		"index"		"59"
-		"classes"	"weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Uderzenie pioruna"
 	{
@@ -3408,17 +3498,17 @@
 	"Stal nawęglana"
 	{
 		"index"		"44"
-		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_fiveseven;weapon_ak47;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Śniedź"
 	{
 		"index"		"43"
-		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_elite;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Niebieska stal"
 	{
 		"index"		"42"
-		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_xm1014;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Miedź"
 	{
@@ -3438,7 +3528,7 @@
 	"Gradient"
 	{
 		"index"		"38"
-		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_glock;weapon_mac10;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Żar"
 	{
@@ -3533,7 +3623,7 @@
 	"Szkarłatna sieć"
 	{
 		"index"		"12"
-		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_cz75a;weapon_revolver;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Czaszki"
 	{
@@ -3563,7 +3653,7 @@
 	"Leśny DDPAT"
 	{
 		"index"		"5"
-		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
+		"classes"	"weapon_sawedoff;weapon_mp7;weapon_bayonet;weapon_knife_css;weapon_knife_flip;weapon_knife_gut;weapon_knife_karambit;weapon_knife_m9_bayonet;weapon_knife_tactical;weapon_knife_falchion;weapon_knife_survival_bowie;weapon_knife_butterfly;weapon_knife_push;weapon_knife_ursus;weapon_knife_gypsy_jackknife;weapon_knife_stiletto;weapon_knife_widowmaker;"
 	}
 	"Jabłko kandyzowane"
 	{
